Add win overlay with confetti and score display

--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
         </div>
     </div>
 
+    <!-- Win Overlay -->
+    <div id="winOverlay" class="win-overlay" aria-hidden="true" style="display:none;">
+        <div class="win-card">
+            <div class="confetti">
+                <span></span><span></span><span></span><span></span><span></span>
+                <span></span><span></span><span></span><span></span><span></span>
+            </div>
+            <h2 class="win-title">You Win!</h2>
+            <p id="winSubtitle" class="win-subtitle">Great job!</p>
+            <div id="winScore" class="win-score">Game Complete! Final Score: 0 points</div>
+            <button id="winNewGameBtn" class="new-game-btn">Start New Game</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
